Address failing architecture tests.